--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,7 @@ PORT = 6000
 
 MONGO_URL = mongodb+srv://patilravi1393:3nJUKzNlIHLCwvhI@chat.tibvpts.mongodb.net/?retryWrites=true&w=majority
 
-JWT_SECRET = WIEJDFHTUGNVXMIQWIRFHGNVBHDIROEOSDJWSDRODCX
+JWT_SECRET = 
 
 JWT_EXPIRE = 2d
 
